--- a/app/views/attendance_reports/index.html.erb
+++ b/app/views/attendance_reports/index.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <!-- <li><%= link_to "#{t('advanced')}", :controller=>"student_attendance", :action=>"advance_search" %></li> -->
+    <!-- <li><%= link_to t('advanced'), :controller=>"student_attendance", :action=>"advance_search" %></li> -->
   </ul>
 </div>
 <div id="page-yield">
@@ -37,7 +37,7 @@
       <% if @config.config_value == 'Daily' %>
         <%= select :batch, :id,
           @batches.map {|b| [b.full_name, b.id] },
-          {:prompt => "#{t('select_a_batch')}"},
+          {:prompt => t('select_a_batch')},
           {:onchange => "#{remote_function(
           :url => { :action => 'mode' },
           :with => "'batch_id='+value+'&subject_id='",
