--- a/app/views/student/categories.erb
+++ b/app/views/student/categories.erb
@@ -19,11 +19,11 @@
 
 
 <div id="content-header">
-  <%= image_tag("  show_settings.png") %>
+  <%= image_tag("show_settings.png") %>
   <h1><%= t('students') %></h1>
   <h3><%= t('categories') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
