--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-     <%= image_tag("  show_settings.png") %>
+  <%= image_tag("show_settings.png") %>
   <h1><%= t('subject') %></h1>
   <h3><%= t('home') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -34,20 +34,21 @@
   </div>
 <div class="box">
 
-  <div class="label-field-pair">
-    <label for="student_course"><%= t('select_a_batch') %>:
-<%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
-   </label>
-   <div class="text-input-bg">
-  <%= select :batch, :id,
-  @batches.map {|b| [b.full_name, b.id] },
-  {:prompt => t('select_a_batch')},
-  {:onchange => "#{remote_function(
-  :url => { :action => 'show' },
-  :with => "'batch_id='+value",
-  :before => "Element.show('loader')",
-  :success => "Element.hide('loader')"  )}"} %>
-</div></div>
+<div class="label-field-pair">
+  <label for="student_course"><%= t('select_a_batch') %>:
+    <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
+  </label>
+  <div class="text-input-bg">
+    <%= select :batch, :id,
+      @batches.map {|b| [b.full_name, b.id] },
+      { prompt: t('select_a_batch')},
+      { onchange: "#{remote_function(
+      url: { action: 'show', batch_id: "value" },
+      with: "'batch_id='+value",
+      before: "Element.show('loader')",
+      success: "Element.hide('loader')"  )}"} %>
+  </div>
+</div>
 
 <div id="subjects"></div>
 <div id="modal-box" style="display:none;"></div>
