--- a/app/assets/stylesheets/rtl/user/dashboard.css
+++ b/app/assets/stylesheets/rtl/user/dashboard.css
@@ -29,53 +29,53 @@
     text-align: center;
 }
 
-#admission_button {background:#fff url(../../../images/dashboard_buttons/button_admission.png) 0 0 no-repeat;}
-#admission_button:hover {background:#fff url(../../../images/dashboard_buttons/button_admission.png) -175px 0 no-repeat;}
+#admission_button {background:#fff url(/assets/dashboard_buttons/button_admission.png) 0 0 no-repeat;}
+#admission_button:hover {background:#fff url(/assets/dashboard_buttons/button_admission.png) -175px 0 no-repeat;}
 
-#student_details_button {background:#fff url(../../../images/dashboard_buttons/button_student_details.png) 0 0 no-repeat;}
-#student_details_button:hover {background:#fff url(../../../images/dashboard_buttons/button_student_details.png) -175px 0 no-repeat;}
+#student_details_button {background:#fff url(/assets/dashboard_buttons/button_student_details.png) 0 0 no-repeat;}
+#student_details_button:hover {background:#fff url(/assets/dashboard_buttons/button_student_details.png) -175px 0 no-repeat;}
 
-#manage_users_button {background:#fff url(../../../images/dashboard_buttons/button_manage_users.png) 0 0 no-repeat;}
-#manage_users_button:hover {background:#fff url(../../../images/dashboard_buttons/button_manage_users.png) -175px 0 no-repeat;}
+#manage_users_button {background:#fff url(/assets/dashboard_buttons/button_manage_users.png) 0 0 no-repeat;}
+#manage_users_button:hover {background:#fff url(/assets/dashboard_buttons/button_manage_users.png) -175px 0 no-repeat;}
 
-#manage_news_button {background:#fff url(../../../images/dashboard_buttons/button_manage_news.png) 0 0 no-repeat;}
-#manage_news_button:hover {background:#fff url(../../../images/dashboard_buttons/button_manage_news.png) -175px 0 no-repeat;}
+#manage_news_button {background:#fff url(/assets/dashboard_buttons/button_manage_news.png) 0 0 no-repeat;}
+#manage_news_button:hover {background:#fff url(/assets/dashboard_buttons/button_manage_news.png) -175px 0 no-repeat;}
 
-#examinations_button {background:#fff url(../../../images/dashboard_buttons/button_examinations.png) 0 0 no-repeat;}
-#examinations_button:hover {background:#fff url(../../../images/dashboard_buttons/button_examinations.png) -175px 0 no-repeat;}
+#examinations_button {background:#fff url(/assets/dashboard_buttons/button_examinations.png) 0 0 no-repeat;}
+#examinations_button:hover {background:#fff url(/assets/dashboard_buttons/button_examinations.png) -175px 0 no-repeat;}
 
-#timetable_button {background:#fff url(../../../images/dashboard_buttons/button_timetable.png) 0 0 no-repeat;}
-#timetable_button:hover {background:#fff url(../../../images/dashboard_buttons/button_timetable.png) -175px 0 no-repeat;}
+#timetable_button {background:#fff url(/assets/dashboard_buttons/button_timetable.png) 0 0 no-repeat;}
+#timetable_button:hover {background:#fff url(/assets/dashboard_buttons/button_timetable.png) -175px 0 no-repeat;}
 
-#student_attendance_button {background:#fff url(../../../images/dashboard_buttons/attendance.png) 0 0 no-repeat;}
-#student_attendance_button:hover {background:#fff url(../../../images/dashboard_buttons/attendance.png) -175px 0 no-repeat;}
+#student_attendance_button {background:#fff url(/assets/dashboard_buttons/attendance.png) 0 0 no-repeat;}
+#student_attendance_button:hover {background:#fff url(/assets/dashboard_buttons/attendance.png) -175px 0 no-repeat;}
 
-#settings_button {background:#fff url(../../../images/dashboard_buttons/settings.png) 0 0 no-repeat;}
-#settings_button:hover {background:#fff url(../../../images/dashboard_buttons/settings.png) -175px 0 no-repeat;}
+#settings_button {background:#fff url(/assets/dashboard_buttons/settings.png) 0 0 no-repeat;}
+#settings_button:hover {background:#fff url(/assets/dashboard_buttons/settings.png) -175px 0 no-repeat;}
 
-#hr_button {background:#fff url(../../../images/dashboard_buttons/button_Human.png) 0 0 no-repeat;}
-#hr_button:hover {background:#fff url(../../../images/dashboard_buttons/button_Human.png) -175px 0 no-repeat;}
+#hr_button {background:#fff url(/assets/dashboard_buttons/button_Human.png) 0 0 no-repeat;}
+#hr_button:hover {background:#fff url(/assets/dashboard_buttons/button_Human.png) -175px 0 no-repeat;}
 
-#finance_button {background:#fff url(../../../images/dashboard_buttons/button_finance.png) 0 0 no-repeat;}
-#finance_button:hover {background:#fff url(../../../images/dashboard_buttons/button_finance.png) -175px 0 no-repeat;}
+#finance_button {background:#fff url(/assets/dashboard_buttons/button_finance.png) 0 0 no-repeat;}
+#finance_button:hover {background:#fff url(/assets/dashboard_buttons/button_finance.png) -175px 0 no-repeat;}
 
-#academic_button {background:#fff url(../../../images/dashboard_buttons/button_academics.png) 0 0 no-repeat;}
-#academic_button:hover {background:#fff url(../../../images/dashboard_buttons/button_academics.png) -175px 0 no-repeat;}
+#academic_button {background:#fff url(/assets/dashboard_buttons/button_academics.png) 0 0 no-repeat;}
+#academic_button:hover {background:#fff url(/assets/dashboard_buttons/button_academics.png) -175px 0 no-repeat;}
 
-#campus_news_button {background:#fff url(../../../images/dashboard_buttons/button_campus_news.png) 0 0 no-repeat;}
-#campus_news_button:hover {background:#fff url(../../../images/dashboard_buttons/button_campus_news.png) -175px 0 no-repeat;}
+#campus_news_button {background:#fff url(/assets/dashboard_buttons/button_campus_news.png) 0 0 no-repeat;}
+#campus_news_button:hover {background:#fff url(/assets/dashboard_buttons/button_campus_news.png) -175px 0 no-repeat;}
 
-#my_profile_button {background:#fff url(../../../images/dashboard_buttons/button_my_profile.png) 0 0 no-repeat;}
-#my_profile_button:hover {background:#fff url(../../../images/dashboard_buttons/button_my_profile.png) -175px 0 no-repeat;}
+#my_profile_button {background:#fff url(/assets/dashboard_buttons/button_my_profile.png) 0 0 no-repeat;}
+#my_profile_button:hover {background:#fff url(/assets/dashboard_buttons/button_my_profile.png) -175px 0 no-repeat;}
 
-#leaves_button {background:#fff url(../../../images/dashboard_buttons/button_leaves.png) 0 0 no-repeat;}
-#leaves_button:hover {background:#fff url(../../../images/dashboard_buttons/button_leaves.png) -175px 0 no-repeat;}
+#leaves_button {background:#fff url(/assets/dashboard_buttons/button_leaves.png) 0 0 no-repeat;}
+#leaves_button:hover {background:#fff url(/assets/dashboard_buttons/button_leaves.png) -175px 0 no-repeat;}
 
-#reminders_button {background:#fff url(../../../images/dashboard_buttons/button_reminders.png) 0 0 no-repeat;}
-#reminders_button:hover {background:#fff url(../../../images/dashboard_buttons/button_reminders.png) -175px 0 no-repeat;}
+#reminders_button {background:#fff url(/assets/dashboard_buttons/button_reminders.png) 0 0 no-repeat;}
+#reminders_button:hover {background:#fff url(/assets/dashboard_buttons/button_reminders.png) -175px 0 no-repeat;}
 
-#reminders_button_unread {background:#fff url(../../../images/dashboard_buttons/button_reminders_unread.png) 0 0 no-repeat;}
-#reminders_button:hover_unread {background:#fff url(../../../images/dashboard_buttons/button_reminders_unread.png) -175px 0 no-repeat;}
+#reminders_button_unread {background:#fff url(/assets/dashboard_buttons/button_reminders_unread.png) 0 0 no-repeat;}
+#reminders_button:hover_unread {background:#fff url(/assets/dashboard_buttons/button_reminders_unread.png) -175px 0 no-repeat;}
 
 .reminder1{
     position: relative;
@@ -99,7 +99,7 @@
 
 /* 'nicetitle' styles for tooltip. */
 
-div.nicetitle { position: absolute; padding: 4px; top: 0px; color: white; font-size: 13px; font-family: Verdana, Helvetica, Arial, sans-serif; width: 30em; font-weight: bold; text-align: center; background: url(/images/ntbg.png); margin-top: 140px; margin-right: -80px; -moz-border-radius: 12px; -webkit-border-radius: 12px; }
+div.nicetitle { position: absolute; padding: 4px; top: 0px; color: white; font-size: 13px; font-family: Verdana, Helvetica, Arial, sans-serif; width: 30em; font-weight: bold; text-align: center; background: url(/assets/ntbg.png); margin-top: 140px; margin-right: -80px; -moz-border-radius: 12px; -webkit-border-radius: 12px; }
 div.nicetitle p { margin: 0; padding: 0 3px; }
 .button-label {
     -moz-border-radius: 10px 10px 10px 10px;
